# test_ominimo

./: .gitignore  README.md  policies.parquet  pyproject.toml  quotes.parquet  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
airflow_project/plugins/: __init__.py
src/airflow_project/: README.airflow.md
src/airflow_project/dags/: dbt_run_dag.py  example_dag.py  ingest_data_dag.py
src/dbt_project/: dbt_project.yml  profiles.yml
src/dbt_project/models/: sources.yml
src/dbt_project/models/mart/: mart_policies_quotes.sql
src/dbt_project/models/raw/: raw_policies.sql  raw_quotes.sql
